# obs-dji-uvc

./: .gitignore  CMakeLists.txt  README.md  build-windows.ps1
.github/workflows/: build.yml
cmake/: FindFFmpeg.cmake
data/locale/: en-US.ini
installer/: obs-dji-uvc.iss  stage.ps1
src/: dji-capture-mf.cpp  dji-capture-mf.h  dji-capture.c  dji-capture.h  dji-decode.c  dji-decode.h  dji-nal.c  dji-nal.h  dji-source.c  plugin-main.c  test-nal.c
